--- a/web/css/main.css
+++ b/web/css/main.css
@@ -161,7 +161,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f7f9', end
 	background:  #E5E9F9;
 	cursor: pointer;
 	color: #337ab7;
-	font-weight: bold;
+	/*font-weight: bold;*/
 }
 .footer{
 }
